<resources>
    <string name="app_name">Harmony</string>
    <string name="Password">password</string>
    <string name="signup">signup</string>
    <string name="add">add</string>
    <string name="menu_home">menu_home</string>
    <string name="nav_header_desc">nav_header</string>
    <string name="navigation_drawer_close">navigation_drawer</string>


    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="submit">Submit</string>
    <string name="hello_world">Hello World</string>
    <string name="myaccount">My Account</string>
    <string name="person_information">Personal Information</string>
    <string name="my_points">My Points</string>
    <string name="bookings_history">Booking History</string>
    <string name="myreviews">My Reviews</string>
    <string name="subscriptions">Subsciptions</string>
    <string name="log_out">Log Out</string>
    <string name="done">Done</string>
    <string name="hello">Hello</string>
    <string name="button">Button</string>
    <string name="add_review">Add Review</string>
    <string name="cancel">Cancel</string>
    <string name="review_text">Enter your review here</string>
    <!-- Strings related to login -->
    <string name="New">New?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text">Lorem</string>
    <string name="username">Username</string>
    <string name="life_style">Lifestyle</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_user">Already Have an Account?</string>
    <string name="forget_password">Forget Password</string>
    <string name="Email">email</string>
    <string name="email1">email</string>
    <string name="confirm">Confirm</string>
    <string name="action_settings">action_settings</string>
    <string name="title_teams">teams</string>
    <string name="title_Account">Account</string>
</resources>