<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="245dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="306dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="forgotPassword"
        android:text="@string/forgot_password"
        tools:layout_editor_absoluteX="282dp"
        tools:layout_editor_absoluteY="388dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:onClick="login"
        android:text="@string/login"
        tools:layout_editor_absoluteX="307dp"
        tools:layout_editor_absoluteY="416dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/New"
        tools:layout_editor_absoluteX="185dp"
        tools:layout_editor_absoluteY="491dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="redirectToRegister"
        android:text="@string/register"
        android:textSize="10sp"
        tools:ignore="MissingConstraints,SmallSp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="518dp" />

    <ImageView
        android:id="@+id/googleLogin"
        android:layout_width="40dp"
        android:layout_height="36dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/app_name"
        android:onClick="onGoogleLogin"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>